@@ -194,6 +194,49 @@ p4a_calendar_select = function (value_id, description_id)
 	);
 }
 
+p4a_db_navigator_load = function (obj_id, current_id, field_to_update, root_movement)
+{
+	p4a_load_js(p4a_theme_path + '/jquery/ui.core.js',
+		function () {
+			p4a_load_js(p4a_theme_path + '/jquery/ui.draggable.js',
+				function () {
+					p4a_load_js(p4a_theme_path + '/jquery/ui.droppable.js',
+						function () {
+							p4a_db_navigator_init(obj_id, current_id, field_to_update, root_movement);
+						}   
+					);
+				}
+			);
+		}
+	);
+}
+
+p4a_db_navigator_init = function (obj_id, current_id, field_to_update, root_movement)
+{
+	$('#' + obj_id + '_' + current_id).draggable({revert:true});
+	$('#' + obj_id + ' li a').droppable({
+		accept: '.active_node',
+		hoverClass: 'hoverclass',
+		tolerance: 'pointer',
+		drop: function() {
+			$('#' + field_to_update + 'input').val($(this).parent().attr('id').split('_')[1]);
+			p4a_event_execute_ajax(field_to_update, 'onchange');
+		}
+	});
+	
+	if (root_movement) {
+		$('#' + obj_id).droppable({
+			accept: '.active_node',
+			hoverClass: 'hoverclass',
+			tolerance: 'pointer',
+			drop: function() {
+				$('#' + field_to_update + 'input').val('');
+				p4a_event_execute_ajax(field_to_update, 'onChange');
+			}
+		});
+	}
+}
+
 p4a_messages_show = function ()
 {
 	if ($('.p4a_system_messages:visible').size() > 0) return false;
